--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ maintenance = { status = "actively-developed" }
 
 [profile.release]
 lto = true
+opt-level = 'z'
+codegen-units = 1
+panic = 'abort'
 
 [dependencies]
 actix-web = { version= "1.0", features = ["rust-tls"] }
