--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - os: ubuntu-latest
+            artifact_name: proxyboi
+            release_name: proxyboi-linux-amd64
+          - os: windows-latest
+            artifact_name: proxyboi.exe
+            release_name: proxyboi-windows-amd64
+          - os: macos-latest
+            artifact_name: proxyboi
+            release_name: proxyboi-macos-amd64
 
     steps:
     - uses: hecrj/setup-rust-action@master
@@ -19,6 +28,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build
       run: cargo build --release
-    - name: Upload build to tag
-      run: curl
-      if: ${{ matrix.os }} == ubuntu-latest
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v1-release
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: target/release/${{ matrix.artifact_name }}
+        asset_name: ${{ matrix.release_name }}
+        tag: {{ github.event.ref }}
