Changes according to new action version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish
 
 on:
-  create:
+  push:
     tags:
       - '*.*.*'
 
@@ -38,4 +38,4 @@ jobs:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: target/release/${{ matrix.artifact_name }}
         asset_name: ${{ matrix.release_name }}
-        tag: ${{ github.event.ref }}
+        tag: ${{ github.ref }}
