--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
       - '*.*.*'
 
 jobs:
-  build:
+  publish:
     name: Publish for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -32,6 +32,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build
       run: cargo build --release --locked
+    - uses: svenstaro/upx-action@v1-release
+      with:
+        file: target/release/${{ matrix.artifact_name }}
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v1-release
       with:
