--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,11 @@ futures = "0.1.29"
 chrono = "0.4"
 structopt = "0.3"
 url = "2.1"
-rustls = "0.15"
 pretty_assertions = "0.6"
 yansi = "0.5"
 Inflector = "0.11"
+webpki = "0.19"
+
+[dependencies.rustls]
+version = "0.15"
+features = ["dangerous_configuration"]
