--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,5 @@ jobs:
       with:
         rust-version: ${{ matrix.rust }}
     - uses: actions/checkout@v1
-    - name: Build
-      run: cargo build
-    - name: Run tests
-      run: cargo test
+    - run: cargo build
+    - run: cargo test
