--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,41 +3,101 @@ name: Publish
 on:
   push:
     tags:
-      - '*.*.*'
+      - 'v*'
 
 jobs:
   publish:
-    name: Publish for ${{ matrix.os }}
+    name: ${{ matrix.os }} for ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # This should work with only the `include`s but it currently doesn't because of this bug:
-        # https://github.community/t5/How-to-use-Git-and-GitHub/GitHub-Actions-Matrix-options-dont-work-as-documented/td-p/29558
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        target:
+          - x86_64-unknown-linux-musl
+          - aarch64-unknown-linux-musl
+          - armv7-unknown-linux-musleabihf
+          - arm-unknown-linux-musleabihf
+          - x86_64-pc-windows-msvc
+          - x86_64-apple-darwin
         include:
           - os: ubuntu-latest
-            artifact_name: proxyboi
-            release_name: proxyboi-linux-amd64
+            target: x86_64-unknown-linux-musl
+            artifact_name: target/x86_64-unknown-linux-musl/release/proxyboi
+            release_name: linux-x86_64
+            cross: true
+            strip: true
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-musl
+            artifact_name: target/aarch64-unknown-linux-musl/release/proxyboi
+            release_name: linux-aarch64
+            cross: true
+            strip: false
+          - os: ubuntu-latest
+            target: armv7-unknown-linux-musleabihf
+            artifact_name: target/armv7-unknown-linux-musleabihf/release/proxyboi
+            release_name: linux-armv7
+            cross: true
+            strip: false
+          - os: ubuntu-latest
+            target: arm-unknown-linux-musleabihf
+            artifact_name: target/arm-unknown-linux-musleabihf/release/proxyboi
+            release_name: linux-arm
+            cross: true
+            strip: false
           - os: windows-latest
-            artifact_name: proxyboi.exe
-            release_name: proxyboi-windows-amd64.exe
+            target: x86_64-pc-windows-msvc
+            artifact_name: target/x86_64-pc-windows-msvc/release/proxyboi.exe
+            release_name: windows-x86_64.exe
+            cross: false
+            strip: true
           - os: macos-latest
-            artifact_name: proxyboi
-            release_name: proxyboi-macos-amd64
+            target: x86_64-apple-darwin
+            artifact_name: target/x86_64-apple-darwin/release/proxyboi
+            release_name: macos-x86_64
+            cross: false
+            strip: true
 
     steps:
-    - uses: hecrj/setup-rust-action@master
-      with:
-        rust-version: stable
-    - uses: actions/checkout@v1
-    - run: cargo build --release --locked
-    - uses: svenstaro/upx-action@v1-release
-      with:
-        file: target/release/${{ matrix.artifact_name }}
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v1-release
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: target/release/${{ matrix.artifact_name }}
-        asset_name: ${{ matrix.release_name }}
-        tag: ${{ github.ref }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+
+      - name: cargo build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release --locked --target=${{ matrix.target }}
+          use-cross: ${{ matrix.cross }}
+
+      - name: Compress binaries
+        uses: svenstaro/upx-action@v2
+        with:
+          file: ${{ matrix.artifact_name }}
+          args: --lzma
+          strip: ${{ matrix.strip }}
+
+      - name: Get tag name
+        id: tag_name
+        run: |
+          echo ::set-output name=current_version::${GITHUB_REF#refs/tags/v}
+        shell: bash
+
+      - name: Get CHANGELOG.md entry
+        id: changelog_reader
+        uses: mindsers/changelog-reader-action@v1
+        with:
+          version: ${{ steps.tag_name.outputs.current_version }}
+          path: ./CHANGELOG.md
+
+      - name: Release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{ matrix.artifact_name }}
+          tag: ${{ github.ref }}
+          asset_name: proxyboi-$tag-${{ matrix.release_name }}
+          body: ${{ steps.changelog_reader.outputs.log_entry }}
