--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proxyboi"
-version = "0.4.4"
+version = "0.4.5-alpha.0"
 description = "A super simple reverse proxy with TLS support"
 authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
 repository = "https://github.com/svenstaro/proxyboi"
