--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ panic = 'abort'
 [dependencies]
 clap = { version = "3.0.0-beta.2", features = ["wrap_help"] }
 actix-web = { version= "3", features = ["rustls"] }
-# simplelog = "0.10"
+simplelog = "0.10"
 log = "0.4"
 futures = "0.3"
 chrono = "0.4"
