--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ codegen-units = 1
 panic = 'abort'
 
 [dependencies]
-clap = { version = "3.2", features = ["derive", "wrap_help"] }
+clap = { version = "4", features = ["derive", "cargo", "wrap_help", "env"] }
 actix-web = { version= "3", features = ["rustls"] }
 simplelog = "0.12"
 log = "0.4"
@@ -29,7 +29,7 @@ Inflector = "0.11"
 thiserror = "1"
 anyhow = "1"
 webpki = "0.21"
-rustls = { version = "0.18", features = ["dangerous_configuration"] }
+rustls = { version = "0.18" }
 
 [dev-dependencies]
 pretty_assertions = "1.1"
